--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Cairo&family=Merriweather+Sans&family=Montserrat:wght@100&family=Open+Sans+Condensed:wght@300;700&family=Poiret+One&family=Roboto+Mono:wght@300&family=Source+Code+Pro&display=swap');@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Cairo&family=Merriweather+Sans&family=Montserrat:wght@100&family=Open+Sans+Condensed:wght@300;700&family=Roboto+Mono:wght@300&family=Source+Code+Pro&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=WindSong&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=WindSong&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Aboreto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aboreto&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One&family=Shadows+Into+Light&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -13,14 +14,15 @@
 }
 
 body {
-  font-family: 'Merriweather Sans', sans-serif;
+  /* font-family: 'Merriweather Sans', sans-serif; */
+  font-family: 'Poiret One', cursive;
 }
 
 .hero {
   display: flex;
   width: 100vw;
   height: 100vh;
-  background: url(./Images/Hero3.jpg);
+  background: url(./Images/herohjarta.jpg);
   background-size:cover;
   background-attachment:initial;
   background-position:center;
@@ -39,22 +41,34 @@ body {
   
 }
 
-.hero-text1{
+.hero-text3{
   color: white;
   font-size: 1em;
   /* font-family: 'Montserrat', sans-serif; */
+  font-family: 'Poiret One', cursive;
   padding-top: 12px;
   padding-right: 500px;
   font-size: 20px;
-  font-weight: bold;
+  /* font-weight: bold; */
 
   
 }
 
 .hero-text2{
+  font-size: 3em;
+  color: white;
+  /* font-family: 'WindSong', cursive; */
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: 300;
+  padding-right: 500px;
+
+}
+
+.hero-text1{
   font-size: 5em;
   color: white;
-  font-family: 'WindSong', cursive;
+  /* font-family: 'WindSong', cursive; */
+  font-family: 'Shadows Into Light', cursive;
   font-weight: 300;
   padding-right: 500px;
 
@@ -63,7 +77,7 @@ body {
  /* <!-- Here is a small text-section -->  */
 .image-section {
 display: flex;
-height: 100vh;
+/* height: 100vh; */
 /* border: pink solid 1px; */
 justify-content: space-evenly;
 
@@ -77,34 +91,38 @@ justify-content: space-evenly;
   }
 
 
+
 .image1{
-  flex-direction: column;
+  flex-direction: row;
   /* width: 20px; */
   align-items: center;
   justify-content: center;
   /* justify-content: space-evenly;
   border: black solid 1px; */
   padding-bottom: 20px;
+  height: 400px;
 }
 
 .image2{
-  flex-direction: column;
+  flex-direction: row;
   /* width: 20px; */
   align-items: center;
   justify-content: center;
   justify-content: space-evenly;
   padding-bottom: 20px;
+  height: 400px;
 
 }
 
 .image3 {
-  flex-direction: column;
+  flex-direction: row;
   height: 400px;
   align-items: center;
   justify-content: center;
   justify-content: space-evenly;
   padding-bottom: 20px;
   padding: 20px;
+  height: 400px;
 
 }
 
@@ -119,7 +137,7 @@ h2 {
   padding-top: 60px;
   padding-bottom: 30px;
   font-size: 30px;
-  font-family: 'Aboreto', cursive;
+  /* font-family: 'Aboreto', cursive; */
   /* text-transform: uppercase; */
 }
 
@@ -264,7 +282,8 @@ input[type=submit] {
   /* border: solid 1px red; */
   font-size: 30px;
   color: #2d3d21;
-  font-family: 'Aboreto', cursive;
+  /* font-family: 'Aboreto', cursive; */
+  font-family: 'Poiret One', cursive;
  }
 
 .accordion .contentBx {
