--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Cairo&family=Merriweather+Sans&family=Montserrat:wght@100&family=Open+Sans+Condensed:wght@300;700&family=Poiret+One&family=Roboto+Mono:wght@300&family=Source+Code+Pro&display=swap');@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Cairo&family=Merriweather+Sans&family=Montserrat:wght@100&family=Open+Sans+Condensed:wght@300;700&family=Roboto+Mono:wght@300&family=Source+Code+Pro&display=swap'); */
-/* @import url('https://fonts.googleapis.com/css2?family=WindSong&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Aboreto&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Poiret+One&family=Shadows+Into+Light&display=swap');
 * {
   margin: 0;
@@ -15,7 +11,6 @@
 }
 
 body {
-  /* font-family: 'Merriweather Sans', sans-serif; */
   font-family: 'Poiret One', cursive;
   font-weight: bold;
 }
@@ -23,7 +18,7 @@ body {
 .hero {
   display: flex;
   width: 100vw;
-  height: 100vh;
+  height: 17em;
   background: url(./Images/herohjarta.jpg);
   background-size:cover;
   background-attachment:initial;
@@ -34,7 +29,7 @@ body {
 } 
 
 .headertext{
-  font-size: 20px;
+  font-size: 10px;
   display: flex;
   justify-content: center;
   flex-direction: column; 
@@ -46,117 +41,44 @@ body {
 .hero-text3{
   color: white;
   font-size: 1em;
-  /* font-family: 'Montserrat', sans-serif; */
   font-family: 'Poiret One', cursive;
-  padding-top: 12px;
-  padding-right: 500px;
-  font-size: 20px;
-  /* font-weight: bold; */
-
+  padding-right: 135px;
+  font-size: 17px;
   
 }
 
 .hero-text2{
-  font-size: 3em;
+  font-size: 32px;
   color: white;
-  /* font-family: 'WindSong', cursive; */
   font-family: 'Shadows Into Light', cursive;
   font-weight: 300;
-  padding-right: 500px;
+  padding-right: 135px;
+  padding-bottom: 25px;
 
 }
 
 .hero-text1{
-  font-size: 5em;
+  font-size: 4em;
   color: white;
-  /* font-family: 'WindSong', cursive; */
   font-family: 'Shadows Into Light', cursive;
   font-weight: 300;
-  padding-right: 500px;
+  padding-right: 135px;
+  padding-top: 75px;
 
-}
-
- /* <!-- Here is a small text-section -->  */
-.image-section {
-display: flex;
-/* height: 100vh; */
-/* border: pink solid 1px; */
-justify-content: space-evenly;
-
-}
-
-.image-section2 {
-  display: flex;
-  /* border: pink solid 1px; */
-  justify-content: space-evenly;
-  
-  }
-
-
-
-.image1{
-  flex-direction: row;
-  /* width: 20px; */
-  align-items: center;
-  justify-content: center;
-  /* justify-content: space-evenly;
-  border: black solid 1px; */
-  padding-bottom: 20px;
-  height: 400px;
-}
-
-.image2{
-  flex-direction: row;
-  /* width: 20px; */
-  align-items: center;
-  justify-content: center;
-  justify-content: space-evenly;
-  padding-bottom: 20px;
-  height: 400px;
-
-}
-
-.image3 {
-  flex-direction: row;
-  height: 400px;
-  align-items: center;
-  justify-content: center;
-  justify-content: space-evenly;
-  padding-bottom: 20px;
-  padding: 20px;
-  height: 400px;
-
-}
-
- /* .needle{
-  height: 30px;
-  width: 30px;
-  margin-top: 80px;
-  margin-bottom: 40px;
-  } */
-
-h2 {
-  padding-top: 60px;
-  padding-bottom: 30px;
-  font-size: 30px;
-  /* font-family: 'Aboreto', cursive; */
-  /* text-transform: uppercase; */
 }
 
 .textbox{
   Justify-content: center;
   display: flex;
-  /* padding: 20px; */
-  flex-direction: row;
+  flex-direction: column;
   text-align: center;
   color: #2d3d21;
   width: 100%;
-  line-height: 1.2em;
-  /* letter-spacing: 0.1em; */
+
 }
 
 .box {
-  padding: 30px;
+  padding: 20px;
   size: 12px;
 }
 
@@ -165,7 +87,6 @@ p {
 }
 
 .invitation-text {
-  /* width:60em; */
   text-align: center;
   margin: 0 auto;
   margin-bottom: 10px;
@@ -175,19 +96,76 @@ p {
 
 }
 
-/* <!-- Sigup form -->  */
+.invitation-text1 {
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 40em;
+  font-size: 16px;
+  color: #a76368;
+  margin-bottom: 10px;
 
+}
+
+.invitation-text2 {
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 40em;
+  font-size: 16px;
+}
+
+.image-section {
+  display: flex;
+  flex-direction: column;
+  
+  }
+  
+  .image1
+   {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 20px;
+
+  }
+  
+  .image2{
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
+    padding-bottom: 20px;
+  
+  }
+  
+  .image3 {
+    height: 400px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    height: 292px;
+  }
+
+  .image4 {
+    height: 320px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 254px;
+  }
+
+  
 .form-image-wrapper {
-  /* background: url(./Images/cake.jpeg); */
   background-position: center;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   box-sizing: border-box;
-  /* color: white; */
   justify-content: center;
   padding-bottom: 20px;
-  /* border: solid black; */
   background-color: #d1d5d6;
  
   }
@@ -211,80 +189,344 @@ p {
 
   }
 
+/* <!-- Accordion --> */
 
-/* form {
-    flex-direction: column;
+.accordion{
+  padding: 10px;
+  box-sizing: border-box;
 }
 
-form label {
+.accordion-name{
   display: flex;
-  flex-direction: column;
+  padding:30px;
+  width: 100%;
+  justify-content: center;
+  font-size: 30px;
+  color: #2d3d21;
+  font-family: 'Poiret One', cursive;
  }
 
-input[type=text], input[type=password]  {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  border-radius: 4px;
-    color: #393535;
-  font-size: 12px;
+.accordion .contentBx {
+  position: relative;
 }
 
-a {
-  font-size: 12px;
-  /* color: white; */
-/* }
-
-input[type=radio]{
-   margin: 15px;
-   }
-
-input[type=checkbox]{
-  margin:5px
-}
-
-input[type=submit] {
-  width: 100%;
-  color: #393535;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
+.accordion .contentBx .label {
+  position: relative;
   cursor: pointer;
-  background-color: grey;
 }
 
-.text{
-  font-size: 10px;
-  color:#393535 ;
-} */
+ .label{ 
+  padding-left:4rem;
+  text-align: left;
+  outline: none;
+  transition: 0.4s;
+  color: #2d3d21;
+  font-size: 20px;
+   
+  }
+
+.accordion .contentBx .label::before{
+  content: "+";
+  position: absolute;
+  right: 65px;
+}
+
+.accordion .contentBx.active .label::before{
+  content: "-";
+}
+
+.accordion .contentBx .content {
+  position: relative;
+  background: #fff;
+  height: 0;
+  overflow: hidden;
+  transition: 0.5s;
+  overflow-y: auto;
+  color: #2d3d21;
+  
+}
+
+.accordion .contentBx.active .content {
+  height: 180px;
+  padding: 8px;
+  background-color: #d1d5d6;
+  color: #2d3d21;
+  padding-left: 1rem;
+}
+
+/* MEDIA QUERIES */
+
+/* TABLET VERSION */
+
+@media (min-width:667px) {
+   
+  .hero {
+    display: flex;
+    width: 100vw;
+    height: 45vh;
+    justify-content: center;
+    align-items:  center;
+  } 
+  
+  .headertext{
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column; 
+    width: 100%;
+    align-items: center;
+    
+  }
+  
+  .hero-text3{
+    font-size: 1em;
+    padding-top: 12px;
+    padding-right: 270px;
+    font-size: 20px;
+    
+  }
+  
+  .hero-text2{
+    font-size: 2em;
+    font-weight: 300;
+    padding-right: 270px;
+  
+  }
+  
+  .hero-text1{
+    font-size: 4em;
+    font-weight: 300;
+    padding-right: 270px;
+  
+  }
+
+  p {
+    font-size: 17px;
+  }
+
+  .box {
+      size: 14px;
+    }
+
+
+  .image3 {
+      height: 585px;
+    }
+
+  .image4 {
+      height: 585px;
+
+  }
+    }
+
+    
+
+
+ @media (min-width: 992px) {
+ 
+  
+.hero {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  background-size:cover;
+  background-attachment:initial;
+  background-position:center;
+  position: relative;
+  justify-content: center;
+  align-items:  center;
+} 
+
+.headertext{
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column; 
+  width: 100%;
+  align-items: center;
+  
+}
+
+.hero-text3{
+  color: white;
+  font-size: 1em;
+  font-family: 'Poiret One', cursive;
+  padding-top: 12px;
+  padding-right: 500px;
+  font-size: 20px;
+  
+}
+
+.hero-text2{
+  font-size: 3em;
+  color: white;
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: 300;
+  padding-right: 500px;
+
+}
+
+.hero-text1{
+  font-size: 5em;
+  color: white;
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: 300;
+  padding-right: 500px;
+
+}
+
+.image-section {
+display: flex;
+justify-content: space-evenly;
+flex-direction: row;
+
+
+}
+
+.image-section2 {
+  display: flex;
+  justify-content: space-evenly;
+  
+  }
+
+.image1{
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding-bottom: 20px;
+  height: 400px;
+}
+
+.image2{
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-evenly;
+  padding-bottom: 20px;
+  height: 400px;
+
+}
+
+.image3 {
+  flex-direction: row;
+  height: 400px;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-evenly;
+  padding-bottom: 20px;
+  padding: 20px;
+  height: 400px;
+}
+
+.image4 {
+  flex-direction: row;
+  height: 400px;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-evenly;
+  padding-bottom: 20px;
+  padding: 20px;
+  height: 400px;
+}
+
+h2 {
+  padding-top: 60px;
+  padding-bottom: 30px;
+  font-size: 30px;
+}
+
+.textbox{
+  Justify-content: center;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  color: #2d3d21;
+  width: 100%;
+}
+
+.box {
+  padding: 30px;
+  size: 12px;
+}
+
+p {
+  font-size: 14px;
+}
+
+.invitation-text {
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  width: 100%;
+  max-width: 40em;
+  font-size: 14px;
+
+}
+
+.invitation-text1 {
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 40em;
+  font-size: 16px;
+  color: #a76368;
+  margin-bottom: 10px;
+
+}
+
+.invitation-text2 {
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 40em;
+  font-size: 16px;
+}
+
+.form-image-wrapper {
+  background-position: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  justify-content: center;
+  padding-bottom: 20px;
+  background-color: #d1d5d6;
+ 
+  }
+
+.form-wrapper{
+  padding: 10px; 
+  border-radius: 4px;
+  border: black solid 3px;
+  max-width: 25rem;
+  box-sizing: border-box;  
+  margin-top: 20px;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  
+}
+
+.title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 20px;
+
+  }
 
 /* <!-- Accordion --> */
 
 .accordion{
   padding: 10px;
-  /* border-radius: 4px; */
   box-sizing: border-box;
-  /* max-width: 22rem;
-  margin-top: 40px; */
-  /* border: solid 3px;
-  margin-right: 1rem; */
-  /* margin-left: 1rem; */
-  /* border: solid 1px black; */
 }
 
 .accordion-name{
   display: flex;
-  /* max-width: 45rem; */
   padding:30px;
   width: 100%;
   justify-content: center;
-  /* font-weight: normal; */
-  /* border: solid 1px red; */
   font-size: 30px;
   color: #2d3d21;
-  /* font-family: 'Aboreto', cursive; */
   font-family: 'Poiret One', cursive;
  }
 
@@ -300,18 +542,15 @@ input[type=submit] {
  .label{ 
 
   padding-left:9rem;
-  /* padding: bottom 3rem; */
-  /* padding-right: 3rem;  */
   text-align: left;
   outline: none;
   transition: 0.4s;
-  /* color:white; */
-   /* text-align: center; */
-   /* border: solid 1px pink; */
-   color: #2d3d21;
-   font-size: 20px;
+  color: #2d3d21;
+  font-size: 20px;
    
   }
+
+  
 
 .accordion .contentBx .label::before{
   content: "+";
@@ -334,40 +573,11 @@ input[type=submit] {
   
 }
 
-.text-acc1 {
-  color: #a46d6b;
-  font-size: 16px;
-}
 .accordion .contentBx.active .content {
   height: 180px;
   padding: 8px;
   background-color: #d1d5d6;
-  /* background-color: grey; */
-  /* text-align: center; */
-  /* width: 80%;
-  padding-left:20rem; */
   color: #2d3d21;
   padding-left: 9rem;
 }
-
-
-
-
-/* <!-- DESKTOP STYLING --> */
-
-@media (min-widh: 1024px) {
-  
-  h1 {
-     font-size: 160px;
- }
-
-  h2 {
-    font-size: 68px;
-     }
-
- .hero{
-    height: 80%;
- }
-
- 
- }
+  }
