--- a/style.css
+++ b/style.css
@@ -120,6 +120,12 @@ p {
   flex-direction: column;
   
   }
+
+  .image-section2 {
+    display: flex;
+    flex-direction: column;
+    
+    }
   
   .image1
    {
@@ -146,7 +152,7 @@ p {
     justify-content: center;
     padding-bottom: 20px;
     padding-top: 20px;
-    height: 292px;
+    /* height: 292px; */
   }
 
   .image4 {
@@ -154,7 +160,7 @@ p {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 254px;
+    /* height: 254px; */
   }
 
   
@@ -386,6 +392,7 @@ flex-direction: row;
 .image-section2 {
   display: flex;
   justify-content: space-evenly;
+  flex-direction: row;
   
   }
 
