--- a/style.css
+++ b/style.css
@@ -315,14 +315,14 @@ p {
     }
 
 
-  .image3 {
+  /* .image3 {
       height: 585px;
     }
 
   .image4 {
       height: 585px;
 
-  }
+  } */
     }
 
     
